fix #15406 - add more java9 options for geotools plugin
git-svn-id: http://josm.openstreetmap.de/svn/trunk@12932 0c6e7542-c601-0410-84e7-c038aed88b3b